crates/toml_edit/tests/snapshots/invalid/table/duplicate-key-01.stderr
TOML parse error at line 4, column 2
  |
4 | [a]
  |  ^
duplicate key
